[package]
name = "advent-of-code-2020"
version = "0.1.0"
authors = ["Jaanus <jaanus00@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
num-bigint-dig = "0.6.1"
num-traits = "0.2.14"
num-integer = "0.1"
